fixed order of operation error with instruction indexes being calculated before optimizations are executed, corrupting jump target IPs